--- a/atm/src/main/java/atmView/ViewATM.form
+++ b/atm/src/main/java/atmView/ViewATM.form
@@ -193,13 +193,6 @@
                   <EmptySpace min="-2" pref="138" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="2" attributes="0">
                       <Group type="102" alignment="2" attributes="0">
-                          <Component id="button7" max="32767" attributes="0"/>
-                          <EmptySpace min="-2" pref="9" max="-2" attributes="0"/>
-                          <Component id="button8" max="32767" attributes="0"/>
-                          <EmptySpace min="-2" pref="9" max="-2" attributes="0"/>
-                          <Component id="button9" max="32767" attributes="0"/>
-                      </Group>
-                      <Group type="102" alignment="2" attributes="0">
                           <Component id="button4" max="32767" attributes="0"/>
                           <EmptySpace min="-2" pref="9" max="-2" attributes="0"/>
                           <Component id="button5" max="32767" attributes="0"/>
@@ -213,7 +206,16 @@
                           <EmptySpace min="-2" max="-2" attributes="0"/>
                           <Component id="button3" max="32767" attributes="0"/>
                       </Group>
-                      <Component id="button0" alignment="2" min="-2" max="-2" attributes="0"/>
+                      <Group type="102" attributes="0">
+                          <Component id="button7" pref="76" max="32767" attributes="0"/>
+                          <EmptySpace min="-2" pref="9" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Component id="button0" max="32767" attributes="0"/>
+                              <Component id="button8" pref="76" max="32767" attributes="0"/>
+                          </Group>
+                          <EmptySpace min="-2" pref="9" max="-2" attributes="0"/>
+                          <Component id="button9" pref="76" max="32767" attributes="0"/>
+                      </Group>
                   </Group>
                   <EmptySpace type="unrelated" min="-2" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
